--- a/index.html
+++ b/index.html
@@ -21,26 +21,14 @@
   <script type="text/javascript" src="js/jquery.slimscroll.min.js"></script>
   <script type="text/javascript" src="js/jquery.fullPage.js"></script>
   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-
-  <script type="text/javascript">
-    $(document).ready(function(){
-      $('#fullpage').fullpage({
-        anchors: ['firstPage', 'secondPage', '3rdPage'],
-        sectionsColor: ['#313131', '#F8F8F8', '#1E223F'],
-        scrollBar: true,
-        easing: 'swing',
-        navigation: true,
-        navigationPosition: 'right'
-      });
-    });
-  </script>
+  <script type="text/javascript" src="js/customize.js"> </script>
 </head>
 
 <body>
   <div id="fullpage">
-    <div class="section" id="section0">
+    <div class="section" id="section1">
       <div class="row">
-        <div class="col-md-offset-1 col-md-5">
+        <div class="pic col-md-offset-1 col-md-5">
           <img src="images/undergrad.jpg" alt="undergraduate" class="img-thumbnail img-responsive" width="400" />
         </div>
         <div class="col-md-offset-1 voffset col-md-4 visible-md visible-lg orange">
@@ -51,21 +39,21 @@
       </div>
     </div>
 
-    <div class="section" id="section1">
+    <div class="section" id="section2">
       <div class="row">
         <div class="col-md-offset-1 voffset col-md-4 visible-md visible-lg">
           <h1>This is a cool pictue of me!</h1>
           <h2>2012&#126;Now</h2>
           <h2>In Tencent.</h2>
         </div>
-        <div class="col-md-offset-1 col-md-5">
+        <div class="pic col-md-offset-1 col-md-5">
           <img src="images/cool.jpg" width="350" alt="Cool of me" class="img-responsive img-thumbnail">
         </div>
       </div>
     </div>
 
-    <div class="section" id="section2">
-      <div class="col-md-offset-1 col-md-5">
+    <div class="section" id="section3">
+      <div class="pic col-md-offset-1 col-md-5">
         <img src="images/wedding.jpg" height="480" width="640" alt="wedding" class="img-responsive img-thumbnail">
       </div>
       <div class="col-md-offset-1 col-md-4 visible-md visible-lg red">
